0/1 for is_active, added description.

--- a/services.html
+++ b/services.html
@@ -43,6 +43,15 @@
 								</div>
 								<div class="cClear"><!--  --></div>
 							</div>
+                            <div class="cTM1">
+                                <div class="cLeft cW25 formLabel" align="right">
+                                    <strong>Description:&nbsp;</strong>
+                                </div>
+                                <div class="cLeft cW75">
+                                    <input type="text" class="cW98" name="Description" value="" onkeyup="makeClearable()"/>
+                                </div>
+                                <div class="cClear"><!--  --></div>
+                            </div>
 							
 							
 							<div class="cTM1">
