--- a/roles.html
+++ b/roles.html
@@ -115,7 +115,7 @@
                                 <td class="no-border">
                                     <div class="btn-group pull-left">
 
-                                        <a class="btn btn-small btn-inverse" ng-click="" ><i class="icon-trash"></i></a>
+                                        <a class="btn btn-small btn-inverse" ng-click="removeAccess()" ><i class="icon-trash"></i></a>
                                     </div>
                                 </td>
                             </tr>
