check for duplicates before adding to scope

--- a/roles.html
+++ b/roles.html
@@ -89,8 +89,8 @@
                             <option value='Read Only' selected>Read Only</option>
                             <option value='Write Only' selected>Write Only</option>
                             <option value='No Access' selected>No Access</option>
-                        </select>
-                            <a class="btn btn-small btn-inverse" ng-click="addServiceAccess()" ><i class="icon-add"></i> Add Service Access</a>
+                        </select><br/>
+                            <div><a class="btn btn-small btn-inverse" ng-click="addServiceAccess()" ><i class="icon-add"></i> Add Service Access</a><span style="display:none;padding-left:10px;" id="alert-container" class="alert alert-error"></span> </div>
 
                         </div>
                         <table id="field-list" class="table table-hover table-striped">
