--- a/import.html
+++ b/import.html
@@ -1,8 +1,8 @@
 <h4>Import App</h4>
-<div class="well" style="padding:10px;height:100%">
+<div class="well" style=" height: 80%;padding: 10px;position: absolute;width: 100%;">
     <h5>Choose a .dfpkg file to upload</h5><br/>
-<form id="upload-form" name="upload-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" enctype="multipart/form-data" target="importFileIframe">
-    <input id="zipFileInput"  type="file" name="files"/><button ng-click='uploadPackage()' class="btn btn-primary">Upload</button>
-</form>
-<iframe style="display:none" frameBorder="0" id="importFileIframe" name="importFileIframe" src="about:blank" width="100%" height="70px"></iframe>
+    <form id="upload-form" name="upload-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" enctype="multipart/form-data" target="importFileIframe">
+        <input id="zipFileInput"  type="file" name="files"/><button ng-click='uploadPackage()' class="btn btn-primary">Upload</button>
+    </form>
+    <iframe style="display:none" frameBorder="0" id="importFileIframe" name="importFileIframe" src="about:blank" width="100%" height="70px"></iframe>
 </div>
