Added refresh to app list

--- a/applications.html
+++ b/applications.html
@@ -12,7 +12,7 @@
                     <tr>
                         <th>App Label</th>
 
-                        <th class="no-border"></th>
+                        <th class="no-border"><a class="btn btn-inverse btn-small pull-right" ng-click="reload()"><i class="icon-refresh"></i></a></th>
                     </tr>
                     </thead>
                     <tbody>
