--- a/roles.html
+++ b/roles.html
@@ -45,7 +45,7 @@
                             <p>Description</p>
                             <input ng-model="role.description" type="text"/>
                         </div>
-                        <div class="section">
+                        <div class="section limit-list">
                             Users Assigned to this Role.
 
                             <table  class="table table-hover table-striped table-bordered">
@@ -60,7 +60,7 @@
 
 
                         </div>
-                        <div class="section">
+                        <div class="section limit-list">
                             Apps Assigned to this Role.
 
                             <table  class="table table-hover table-striped table-bordered">
@@ -93,35 +93,37 @@
                             <div><a class="btn btn-small btn-inverse" ng-click="addServiceAccess()" ><i class="icon-add"></i> Add Service Access</a><span style="display:none;padding-left:10px;" id="alert-container" class="alert alert-error"></span> </div>
 
                         </div>
-                        <table id="field-list" class="table table-hover table-striped">
+                        <div class="section limit-list">
+                            <table id="field-list" class="table table-hover table-striped">
 
-                            <tbody>
+                                <tbody>
 
-                            <tr ng-repeat="service_access in role.role_service_accesses">
-                                <td>
-                                    <select ng-init = "loadIndComponents()" ng-change = "loadIndComponents()"  ng-model="service_access.service_id"  ng-options="service.id as service.name for service in Services.record">
-                                    </select>
-                                    <select ng-model="service_access.component" ng-options="component.name as component.label for component in components">
+                                <tr ng-repeat="service_access in role.role_service_accesses">
+                                    <td>
+                                        <select  style="width:140px;" ng-init = "loadIndComponents()" ng-change = "loadIndComponents()"  ng-model="service_access.service_id"  ng-options="service.id as service.name for service in Services.record">
+                                        </select>
+                                        <select style="width:140px;" ng-model="service_access.component" ng-options="component.name as component.label for component in components">
 
-                                    </select>
-                                    <select ng-model="service_access.access" style="width:140px;">
-                                        <option value='Full Access' selected>Full Access</option>
-                                        <option value='Read and Write' selected>Read and Write</option>
-                                        <option value='Read Only' selected>Read Only</option>
-                                        <option value='Write Only' selected>Write Only</option>
-                                        <option value='No Access' selected>No Access</option>
-                                    </select>
-                                </td>
-                                <td class="no-border">
-                                    <div class="btn-group pull-left">
+                                        </select>
+                                        <select ng-model="service_access.access" style="width:140px;">
+                                            <option value='Full Access' selected>Full Access</option>
+                                            <option value='Read and Write' selected>Read and Write</option>
+                                            <option value='Read Only' selected>Read Only</option>
+                                            <option value='Write Only' selected>Write Only</option>
+                                            <option value='No Access' selected>No Access</option>
+                                        </select>
+                                    </td>
+                                    <td class="no-border">
+                                        <div class="btn-group pull-left">
 
-                                        <a class="btn btn-small btn-inverse" ng-click="removeAccess()" ><i class="icon-trash"></i></a>
-                                    </div>
-                                </td>
-                            </tr>
+                                            <a class="btn btn-small btn-inverse" ng-click="removeAccess()" ><i class="icon-trash"></i></a>
+                                        </div>
+                                    </td>
+                                </tr>
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                         <div id="button_holder">
                             <a id="save_button" ng-click="create()" class="btn btn-primary">
                                 <li class="icon-save"></li>
