--- a/schema.html
+++ b/schema.html
@@ -1,8 +1,11 @@
-<h4>Tables<a ng-click="showForm()" class="btn btn-small pull-right btn-primary"><li class="icon-plus-sign-alt"></li> Create New Table</a></h4>
+<h4>Tables<a ng-click="showJSON()" class="btn btn-small pull-right btn-primary">
+    <li class="icon-plus-sign-alt"></li> Import JSON Schema</a><a ng-click="showForm()" class="btn btn-small pull-right btn-primary">
+    <li class="icon-plus-sign-alt"></li>
+    Create New Table</a></h4>
 <table style="width:100%" ng-controller="SchemaCtrl">
     <tr>
         <td id="item-list">
-            <div id="grid-table" class="well" >
+            <div id="grid-table" class="well">
                 <table id="app-list" class="table table-hover table-striped">
                     <thead>
                     <tr>
@@ -17,8 +20,8 @@
                         <td ng-click="showData()">{{table.name}}</td>
                         <td class="no-border">
                             <div class="btn-group">
-                                <a class="btn btn-small btn-inverse" ><i class="icon-edit"></i></a>
-                                <a class="btn btn-small btn-inverse" ng-click="delete()" ><i class="icon-trash"></i></a>
+                                <a class="btn btn-small btn-inverse"><i class="icon-edit"></i></a>
+                                <a class="btn btn-small btn-inverse" ng-click="delete()"><i class="icon-trash"></i></a>
                             </div>
                         </td>
                     </tr>
@@ -28,7 +31,7 @@
             </div>
         </td>
         <td>&nbsp;</td>
-        <td id="app-details" class="well" >
+        <td id="app-details" class="well">
             <div>
                 <div class="detail-view">
                     <div id="grid-container">
@@ -71,7 +74,9 @@
                         <div class="section">
                             Allow Null: <input type="checkbox" ng-model="schema.table.field.allow_null"/>
                         </div>
-                        <div><a class="btn btn-primary" ng-click="addField()"><li class="icon-plus-sign-alt"></li>&nbsp;Add Field</a></div>
+                        <div><a class="btn btn-primary" ng-click="addField()">
+                            <li class="icon-plus-sign-alt"></li>
+                            &nbsp;Add Field</a></div>
 
                         <div id="fields_container"></div>
                         <table id="field-list" class="table table-hover table-striped">
@@ -86,20 +91,69 @@
                                 <td class="no-border">
                                     <div class="btn-group">
 
-                                        <a class="btn btn-small btn-inverse" ng-click="removeField()" ><i class="icon-trash"></i></a>
+                                        <a class="btn btn-small btn-inverse" ng-click="removeField()"><i
+                                                class="icon-trash"></i></a>
                                     </div>
                                 </td>
                             </tr>
 
                             </tbody>
                         </table>
-                        <div><a class="btn btn-primary" ng-click="create()"><li class="icon-save"></li>&nbsp;Create Table</a></div>
+                        <div><a class="btn btn-primary" ng-click="create()">
+                            <li class="icon-save"></li>
+                            &nbsp;Create Table</a></div>
                     </div>
-                </div>
+
 
 
             </div>
+                <div id="json_upload" style="display:none;">
+                    <style>
+                        body {
+                            font-family: sans-serif;
+                        }
 
+                        #result {
+                            padding: 1em;
+                        }
+
+                        .pass {
+                            background-color: #efe;
+                            color: #393;
+                            border: 2px solid #393;
+                        }
+
+                        .fail {
+                            background-color: #fee;
+                            color: #933;
+                            border: 2px solid #933;
+                        }
+
+                        textarea {
+                            width: 100%;
+                        }
+                    </style>
+
+
+                    <h5>Enter JSON Schema</h5>
+
+                    <textarea id="source" rows="20" cols="50">
+
+                    </textarea>
+
+                    <p style="white-space: nowrap">
+                        <button ng-click="validateJSON()" id="button">Validate</button>
+                        <input type="checkbox" value="yes" id="reformat"/><label for="reformat">reformat
+                        JSON</label>
+                    </p>
+                    <h2>Results</h2>
+                    <pre id="result"></pre>
+                    <p>
+                      <button class="btn btn-primary" ng-click="postJSON()" class="icon-save"> Create Table</button>
+                    </p>
+                </div>
+
+            </div>
         </td>
     </tr>
 </table>
