removed spaces in textarea

--- a/schema.html
+++ b/schema.html
@@ -106,7 +106,7 @@
 
 
 
-            </div>
+                </div>
                 <div id="json_upload" style="display:none;">
                     <style>
                         body {
@@ -137,9 +137,7 @@
 
                     <h5>Enter JSON Schema</h5>
 
-                    <textarea id="source" rows="20" cols="50">
-
-                    </textarea>
+                    <textarea id="source" rows="20" cols="50"></textarea>
 
                     <p style="white-space: nowrap">
                         <button ng-click="validateJSON()" id="button">Validate</button>
@@ -149,7 +147,7 @@
                     <h2>Results</h2>
                     <pre id="result"></pre>
                     <p>
-                      <button class="btn btn-primary" ng-click="postJSON()" class="icon-save"> Create Table</button>
+                        <button class="btn btn-primary" ng-click="postJSON()" class="icon-save"> Create Table</button>
                     </p>
                 </div>
 
