ie9 width fix class

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body id="admin-body">
 
 <table id="container">
+    <tr><td class="ie-width-fix"><img src="img/trans.png" style="height:1px;width:220px" /></td><td class="ie-width-fix" colspan="2"></td></tr>
     <tr>
         <td id="sidebar" ng-include src="'navigation.html'"></td>
         <td>&nbsp;&nbsp;</td>
