refactoring to use utils.js

--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -16,7 +16,7 @@
 
     <!-- DF Imports -->
     <script src="/lib/web-core/js/df.js"></script>
-    <script src="/lib/web-core/js/df-err.js"></script>
+    <script src="/lib/web-core/js/utils.js"></script>
     <script src="/lib/web-core/js/bootstrap.min.js"></script>
 
     <!-- DF FileManager -->
