--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
     <li onclick="setCurrentApp('roles')" id="nav_roles"><a href="#/role"><i class="icon icon-group"></i> <span>Roles</span></a></li>
     <li onclick="setCurrentApp('groups')" id="nav_groups"><a href="#/group"><i class="icon icon-sitemap"></i> <span>App Groups</span></a></li>
     <li onclick="setCurrentApp('services')" id="nav_services"><a href="#/service"><i class="icon icon-exchange"></i> <span>Services</span></a></li>
-    <li onclick="setCurrentApp('files')" id="nav_files"><a href="#/users"><i class="icon icon-folder-open"></i> <span>Manage Files</span></a></li>
+    <li onclick="setCurrentApp('files')" id="nav_files"><a href="#/file"><i class="icon icon-folder-open"></i> <span>Manage Files</span></a></li>
     <li onclick="setCurrentApp('schema')" id="nav_schema"><a href="#/schema"><i class="icon icon-table"></i> <span>Manage Data</span></a></li>
     <li onclick="setCurrentApp('docs')" id="nav_docs"><a href="#/users"><i class="icon icon-book"></i> <span>API Documentation</span></a></li>
     <li onclick="setCurrentApp('help')" id="nav_help"><a href="#/users"><i class="icon icon-question-sign"></i> <span>Help</span></a></li>
