initial swagger commit for api doc link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <script src="js/controllers/schemactrl.js"></script>
 <script src="js/controllers/servicectrl.js"></script>
 <script src="js/controllers/filectrl.js"></script>
+<script src="js/controllers/swaggerctrl.js"></script>
 <script src="js/json2.js"></script>
 <script src="js/jsonlint.js"></script>
 <script src="js/app.js"></script>
