--- a/swagger/index.html
+++ b/swagger/index.html
@@ -75,6 +75,11 @@
 
 <body>
 
+
+<div id="message-bar" class="swagger-ui-wrap">
+    &nbsp;
+</div>
+
 <div id="swagger-ui-container" class="swagger-ui-wrap">
 
 </div>
